--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -257,6 +257,6 @@ pre {
 
 .footnote {
   @extend %word-wrap;
-  color: $gray;
+  color: $gray-darkest;
   font-size: .8em;
 }
